TestCases/ASTTests/SemanticErrorsTests/tests/test14.c
int main() {


int some_variable;

some_variable = x + 3;
    return 0;

}
